--- a/app/views/layouts/findbug/application.html.erb
+++ b/app/views/layouts/findbug/application.html.erb
@@ -560,7 +560,7 @@
           <path d="M22 13h-4"/>
           <path d="M17.2 17c2.1.1 3.8 1.9 3.8 4"/>
         </svg>
-        <span>Findbug</span>
+        <span>FindBug</span>
       </a>
       <nav>
         <a href="<%= findbug.root_path %>" class="<%= 'active' if controller_name == 'dashboard' %>">Dashboard</a>
